tests/baselines/reference/thisKeyword.errors.txt
thisKeyword.ts(2,5): error TS2331: 'this' cannot be referenced in a module or namespace body.


==== thisKeyword.ts (1 errors) ====
    namespace foo {
        this.bar = 4;
        ~~~~
!!! error TS2331: 'this' cannot be referenced in a module or namespace body.
    }